--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id = "startGame">
-      Press Enter to Start Game!
+      Press Enter to Start the Game!
     </div>
   </body>
 </html>
