--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
-    <script src="Asteroids.js"></script>
-    <script src="Ship.js"></script>
-    <script src="meteor.js"></script>
-    <script src="laser.js"></script>
+    <script src="asteroids.js" type="text/javascript"></script>
+    <script src="ship.js" type="text/javascript"></script>
+    <script src="meteor.js" type="text/javascript"></script>
+    <script src="laser.js" type="text/javascript"></script>
     <link rel="stylesheet" href="styles.css">
   <style> 
   </style>
